--- a/data/main.yaml
+++ b/data/main.yaml
@@ -2,7 +2,7 @@
   desc : O novo espaço hacker do Brasilia
   tags : 
     - lugar
-    - maker
+    - makers
   links : 
     - http://calango.club/ Home
   img : calango.jpg
@@ -13,7 +13,7 @@
   tags : 
     - lugar
     - empresa
-    - maker
+    - makers
   links : 
     - http://www.brasiliafablab.com.br/ Site
     - https://instagram.com/bsbfablab Instagram
@@ -26,7 +26,7 @@
   tags :
     - lugar
     - empresa
-    - maker
+    - makers
     - galeria
     - arte
   links : 
@@ -69,7 +69,7 @@
   tags :
     - escola
     - lugar
-    - maker
+    - makers
   desc : Um lugar diferente, onde repaginamos móveis usados e criamos pequenas coisas que  tornam nossas moradas mais alegres, coloridas e autênticas. ÔdeCasa! é também um Atelie Livre! Um lugar para despertar e inspirar sua criatividade. Agende um horário no Ateliê para colocar a “mão-na-massa”. Usar seu tempo para cultivar sua criatividade, pintando, bordando, costurando, lixando, reaproveitando materiais é uma forma de presente(ficar) você mesmo.  
   map : -15.76993 -47.87902
 
@@ -135,7 +135,7 @@
   tags : 
     - empresa 
     - eletronica 
-    - maker
+    - makers
   map : -15.80989 -47.90229
   
 - name : Calango Hacker Clube
